# kolmogorov_complexity_estimator

./: .gitignore  .pre-commit-config.yaml  LICENSE  profile.prof  profile.txt  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  methodology.rst  usage.rst
examples/: estimate_complexity_from_file.py  profile_simulation.py  run_ctm_simulation.py
kolmogorov_complexity_estimator/: __init__.py  complexity_engine.py  output_aggregator.py  parallel_utils.py  reduction_filters.py  tm_constants.py  tm_encoder.py  tm_enumerator.py  tm_parser.py  turing_machine.py  utils.py
kolmogorov_complexity_estimator/native/: encoder.c  encoder.pyx  turing_machine_ext.c  turing_machine_ext.pyx
profiling/: plot_profiling_results.py  run_batch_experiments_python.py
tests/: __init__.py  conftest.py
tests/integration/: test_run_ctm_simulation.py  test_simulation_pipeline.py
tests/unit/: test_complexity_engine.py  test_output_aggregator.py  test_reduction_filters.py  test_tm_enumerator.py  test_tm_parser.py  test_turing_machine.py
